3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/treasure.c: Added explicit item_power calculation for generated items that
    got an item_power of 0 - should solve bug #1460354.
Yann Chachkoff 2006-07-21

scommon/map.c: Add check to block_linked() to make sure things never block themself.
server/spell_attack.c: Target the head of monsters diseases are cast at.
Alex Schultz 2006-07-18

Fix player count reporting to the metaserver. It now excludes connections with
not-yet-logged-in players and AFK/WIZ/BOT players.
---
socket/metaserver.c: In metaserver_update() use the same conditions as for the
   who command.
Andreas Kirschbaum 2006-07-16

server/spell_effect.c, include/global.h, common/init.c, server/init.c: Add 
    setting "create_home_portals" which allows server admins to allow town
    portals to be created in apartments. Based on a patch by pippijn in the
    cf-ext project.
lib/settings: Set default create_home_portals to FALSE
Alex Schultz 2006-07-12

lib/regions: Fix typo in region "portjoseph". Bug #1518392 (Port Joseph
   region spelling inconsistent with map directory) by Kevin R. Bulgrien.
Andreas Kirschbaum 2006-07-07

acinclude.m4, configure: Fix last fix which discarded any passed in
   CFLAGS or if that is set in the environment.
MSW 2006-07-05

common/button.c: Fix for sourceforge bug common/button.c - harpsicord crashes
   client.  The problem is that the trigger code presumed that the object
   would be animated, and blindly set teh face to the second animation frame.
   harpsicords are not animated, so this could amount to garbage.  So add
   check for trigger objects to see if they are in fact animated before
   blindly setting the face.